# trung.dev

./: .claudeignore  .dockerignore  .env.example  .gitignore  .prettierrc.json  .ruff.toml  .stylelintrc.json  Dockerfile  LICENSE  README.md  docker-compose.logging.dev.yml  docker-compose.logging.prod.yml  docker-compose.logging.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docs.md  entrypoint.sh  env.d.ts  eslint.config.ts  gunicorn.conf.py  index.html  loki-config.dev.yaml  loki-config.prod.yaml  nginx.conf  npm_path.py  package.json  promtail-config.yaml  pyproject.toml  requirements.txt  vite.config.ts
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  orchestrator.yml  tailscale-connection.yml  test-connection.yml
adapters/: github_adapter.py
apps/blog/: admin.py  storage.py  urls.py  views.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
docs/: gunicorn-configuration.md  logging-infrastructure.md  logging-workflow.md  nginx-configuration.md  production-deployment-checklist.md  usefull-command.md  workflows.md
logging/promtail/: promtail-config.yml
loki/: loki-config.yml
prometheus/: prometheus.yml
promtail/: promtail-config.yml
scripts/: README.md  deploy.sh
services/: github_service.py  redis.py  seaweedfs.py
services/discord/: bot.py
services/github/: __init__.py  client.py  dataclasses.py  github.py
src/: App.vue  main.ts
src/api/: http-client.ts
src/assets/: main.css
src/auth/: interface.ts  useAuth.ts
src/composables/: useFilesInfiniteScroll.ts  useLocale.ts
src/locales/: en.json  vi-vn.json
src/router/: index.ts
src/utils/: mime.ts
src/views/: HomeView.vue  Login.vue
static/js/: nav-bar.js  share_anchor.js  tinymce_images_upload_handler.js  toc.js
templates/: base.html  footer.html  header.html  sidebar.html
tests/: test_resolve_variables.py
utilities/: base_dto.py  convert_image_to_webp.py  defused_svg.py  query_debugger.py  random_number.py  resolve_variables.py
(+107 files in other folders)
