[project]
name = "simple-django-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Trung Nguyen",email = "ng.qtrung95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-model-utils (>=5.0.0,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
create-django = "my_module:main"
